Mon Aug 19 13:03:08 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (clock_gettime): should not overwrite cache variable
	  with different condtion.  otherwise -lrt is not linked and the link
	  fails, after reconfig.

Mon Aug 19 12:56:49 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (Init_process): Add constants: CLOCK_REALTIME_ALARM and
	  CLOCK_BOOTTIME_ALARM.

Sun Aug 18 20:17:41 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* variable.c, vm_method.c: remove dead code.

	* test/ruby/test_fiber.rb, test/ruby/test_thread.rb:
	  change accordingly.

Sun Aug 18 19:32:26 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* error.c, file.c, gc.c, hash.c, thread.c, variable.c, vm_eval.c, bin/erb:
	  $SAFE=4 is obsolete.

Sun Aug 18 14:30:47 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_clock_gettime): Rename POSIX_TIME_CLOCK_REALTIME to
	  ISO_C_TIME_CLOCK_REALTIME.

Sun Aug 18 14:22:45 2013  Tanaka Akira  <akr@fsij.org>

	* configure.in: Revert r42604.  It causes linking librt on systems
	  with newer glibc uselessly.

Sun Aug 18 13:18:38 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (Init_process): Add constants: CLOCK_REALTIME_COARSE,
	  CLOCK_MONOTONIC_COARSE and CLOCK_BOOTTIME.

Sun Aug 18 12:41:50 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (clock_gettime): need to check with -lrt prior to check
	  for the function only.  otherwise -lrt is not linked and the link
	  fails, when ac_cv_func_clock_gettime is cached as yes.

Sun Aug 18 10:05:12 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big2str1): Make an expression more explicit.

Sun Aug 18 03:18:45 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big2str1): Use power_level instead of bitsize(xn).

Sun Aug 18 00:44:58 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (BIGDIVREM_EXTRA_WORDS): Redefine to 1.
	  (bigdivrem_num_extra_words): Removed.
	  (bigdivrem_normal): Simplefied.
	  (big2str_karatsuba): Ditto.
