@@ -1,3 +1,9 @@
+Mon Aug 19 13:28:47 2013  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* include/ruby/win32.h (CLOCK_MONOTONIC): typo.
+
+	* win32/win32.c: removed duplicated declarations.
+
 Mon Aug 19 13:03:08 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in (clock_gettime): should not overwrite cache variable
